--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,9 @@
 [tox]
-envlist = py34, py35, py36, flake8
+envlist = py37, flake8
 
 [travis]
 python =
-    3.6: py36
-    3.5: py35
-    3.4: py34
+    3.7: py37
 
 [testenv:flake8]
 basepython = python
@@ -16,7 +14,7 @@ commands = flake8 hauberk
 setenv =
     PYTHONPATH = {toxinidir}
 deps =
-    -r{toxinidir}/requirements_dev.txt
+    -r{toxinidir}/requirements_test.txt
 ; If you want to make tox run the tests with the same versions, create a
 ; requirements.txt with the pinned versions and uncomment the following line:
 ;     -r{toxinidir}/requirements.txt
