--- a/setup.cfg
+++ b/setup.cfg
@@ -12,10 +12,11 @@ search = __version__ = '{current_version}'
 replace = __version__ = '{new_version}'
 
 [bdist_wheel]
-universal = 1
+#universal = 1
 
 [flake8]
 exclude = docs
+ignore=D205
 
 [aliases]
 # Define setup.py command aliases here
@@ -23,4 +24,3 @@ test = pytest
 
 [tool:pytest]
 collect_ignore = ['setup.py']
-
