--- a/.travis.yml
+++ b/.travis.yml
@@ -27,3 +27,10 @@ deploy:
     tags: true
     repo: akail/hauberk
     python: 3.7
+
+# Temporary for Python 3.7
+matrix:
+  include:
+    - python: 3.7
+      dist: xenial
+      sudo: true
