Add trash action

--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ replace = __version__ = '{new_version}'
 
 [flake8]
 exclude = docs
-ignore=D205
+ignore=D205,D107
 
 [aliases]
 # Define setup.py command aliases here
