--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,12 @@
 [tox]
-envlist = py34, py35, py36, py37, flake8
+isolated_build = True
+envlist = py310
+#envlist = py39, py310
 
-[travis]
-python =
-    3.7: py37
-    3.6: py36
-    3.5: py35
-    3.4: py34
-
-[testenv:flake8]
-basepython = python
-deps = flake8
-commands = flake8 hauberk
 
 [testenv]
-setenv =
-    PYTHONPATH = {toxinidir}
-deps =
-    -r{toxinidir}/requirements_test.txt
-; If you want to make tox run the tests with the same versions, create a
-; requirements.txt with the pinned versions and uncomment the following line:
-;     -r{toxinidir}/requirements.txt
+allowlist_externals = poetry
 commands =
-    pip install -U pip
-    py.test --basetemp={envtmpdir}
-
+    poetry install -v
+    poetry run pytest
 
